--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,11 +24,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ProWeb Password</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      if('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+          .then((registration) => { console.log(`Service worker registration succeed ${registration}`, registration.scope) },
+                (error) => { console.log(`Service worker registration failed: ${error}`)})
+          .catch((err) => console.log('Failure: ', err))
+        })
+      } else {
+        console.log('Service worker not supported')
+      }
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
